<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageInput"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        app:srcCompat="@drawable/roundedbutton" />

    <TextView
        android:id="@+id/imageText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        android:text="@string/image" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dateInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        app:boxBackgroundColor="@android:color/transparent"
        app:boxStrokeColor="@color/grey"
        app:endIconMode="custom"
        app:hintTextColor="@color/grey">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:paddingStart="0dp"
            android:paddingBottom="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextColor="@color/grey"
        app:boxStrokeColor="@color/grey"
        android:background="@android:color/transparent"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="15dp"
        app:boxBackgroundColor="@android:color/transparent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/occupationInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/occupation"
            android:paddingStart="0dp"
            android:paddingBottom="0dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:paddingLeft="20dp"
        android:paddingTop="15dp"
        android:paddingRight="20dp"
        app:boxBackgroundColor="@android:color/transparent"
        app:boxStrokeColor="@color/grey"
        app:hintTextColor="@color/grey">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ageInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/age"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:paddingBottom="0dp"
            android:textCursorDrawable="@color/grey" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:paddingLeft="20dp"
        android:paddingTop="15dp"
        android:paddingRight="20dp"
        app:boxBackgroundColor="@android:color/transparent"
        app:boxStrokeColor="@color/grey"
        app:hintTextColor="@color/grey">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/heightInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/height"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:paddingBottom="0dp"
            android:textCursorDrawable="@color/grey" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:paddingLeft="20dp"
        android:paddingTop="15dp"
        android:paddingRight="20dp"
        app:boxBackgroundColor="@android:color/transparent"
        app:boxStrokeColor="@color/grey"
        app:hintTextColor="@color/grey">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/weightInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/weight"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:paddingBottom="0dp"
            android:textCursorDrawable="@color/grey" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/updateProfileButton"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/blue"
        android:text="Update" />


</LinearLayout>