<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".AddActivity" >


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@android:color/transparent"
        android:padding="20dp"
        app:boxStrokeColor="@color/grey"
        app:boxBackgroundColor="@android:color/transparent"
        app:hintTextColor="@color/grey">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/titleInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:paddingBottom="0dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:id="@+id/dateInputLayout"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:padding="20dp"
        app:endIconMode="custom"
        app:hintTextColor="@color/grey"
        app:boxStrokeColor="@color/grey"
        app:endIconDrawable="@drawable/calendar_month_24dp"
        app:boxBackgroundColor="@android:color/transparent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dateInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/date"
            android:paddingStart="0dp"
            android:paddingBottom="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/calendar"
            app:layout_constraintStart_toStartOf="parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:padding="20dp"
        app:hintTextColor="@color/grey"
        app:boxStrokeColor="@color/grey"
        app:boxBackgroundColor="@android:color/transparent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/durationInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/duration"
            android:paddingStart="0dp"
            android:paddingBottom="0dp" />


    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/addButton"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:backgroundTint="@color/teal_200"
        android:text="Add" />


</LinearLayout>