<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UserProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/editProfileImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="#FFFFFF"
            app:srcCompat="@drawable/edit_24dp" />

        <ImageView
            android:id="@+id/userImage"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            app:srcCompat="@drawable/roundedbutton" />

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="TextView"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/occupation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="TextView"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:text="@string/age" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ageDisplay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/age"
            android:textCursorDrawable="@color/grey"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/height"
            android:layout_marginLeft="4dp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/heightDisplay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/height"
            android:textCursorDrawable="@color/grey"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            android:layout_marginLeft="4dp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/weightDisplay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/weight"
            android:textCursorDrawable="@color/grey"
            android:textSize="16sp" />
    </LinearLayout>


</LinearLayout>